--- a/sample-project/index.html
+++ b/sample-project/index.html
@@ -1,8 +1,9 @@
+
  <!Doctype html>
 <html>
 
 <head>
-     <title>HTML Application</title>
+     <title>HTML ApplicatioN new feature1</title>
 	 <link href="css/site.css" rel="stylesheet">
 </head>
 
